flask-news-office/flask-news-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-news-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-news-office
  template:
    metadata:
      labels:
        app: flask-news-office
    spec:
      containers:
      - name: flask-news-office
        image: wolihi/flask-news-office:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 7788
