flask-news-office/flask-bigdata-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-flask-news-office
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    wginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $http_x_forwarded_for;
spec:
  rules:
  - host: www.smokitoba.com
    http:
      paths:
      - backend:
          serviceName: flask-news-office-svc
          servicePort: 7783
        path: /
  - host: smokitoba.com
    http:
      paths:
      - backend:
          serviceName: flask-news-office-svc
          servicePort: 7783
        path: /
